# CMU-10714-DL-System-Course-Project

./: .gitignore  CMakeLists.txt  HIP_BUILD_GUIDE.md  Makefile  README.md  abc.py  compare_accuracy.py  download_200_images.py  draft.ipynb  hipify-script.sh  hw2.ipynb  hw3.ipynb  hw4.ipynb  hw4_extra.ipynb  image.py  manual_test_hw4.py  manual_test_hw4_extra.py  model_description.md  needle_vit.py  output_resnet.txt  output_unet.txt  performance_summary.txt  performance_summary_resnet101.txt  performance_summary_resnet18.txt  performance_summary_resnet50.txt  performance_summary_unet.txt  pipeline_resnet18_test.py  profile_full_pipelilne_unet.py  profile_full_pipeline.py  profile_full_pipeline_resnet.py  project_new_module_test.ipynb  pyproject.toml  requirements.txt  resnet.py  simple_needle_demo.py  test_conv_bn_relu_fusion.py  test_full_pipeline.py  test_images_resnet.py  test_resnet101_pipeline.py  test_resnet50_images.py  (+10 more)
apps/: mlp_resnet.py  models.py  simple_ml.py
apps/Unet/: predict.py  run_unet.py  test_predict.py  unet_segment.py
apps/resnet/: run_resnet.py  test_resnet101_pipeline.py  test_resnet18_pipeline.py  test_resnet50_images.py  test_resnet50_pipeline.py
needle/: __init__.py  autograd.py  backend_selection.py  needle_profiling.py  optim.py
needle/backend_ndarray/: ndarray.py
needle/data/: data_basic.py  data_transforms.py
needle/data/datasets/: cifar10_dataset.py  mnist_dataset.py  ptb_dataset.py
needle/init/: init_initializers.py
needle/nn/: nn_basic.py  nn_conv.py  nn_transformer.py
needle/ops/: __init__.py  ops_fused.py  ops_hip.py  ops_logarithmic.py  ops_mathematic.py
operator_fusion/: fused_layer.py  fusion_pattrern.py  operator_fusion.py
python/needle/nn/: nn_basic.py  nn_sequence.py
python/needle/ops/: ops_fused.py  ops_mathematic.py
src/: ndarray_backend_cpu.cc  ndarray_backend_cpu.h  ndarray_backend_cuda.cu  ndarray_backend_hip.cpp
tests/hw3/: test_ndarray.py
tests/hw4/: test_conv.py  test_nd_backend.py  test_sequence_models.py
torch2needle/: testfile.py  torch2needle_converter.py  torch_models.py  utils.py  weight_converter.py
torch2needle/past_files/: torch2bneedle_v1.py
